termine de agregar los detalles y el js funciona todo a entregar el proyecto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,7 +235,9 @@ i.fa-solid.fa-cart-shopping.fa-2x1:hover{
     display: block;
   }
   
-
-
-/*pagina carrito*/
+/*DESCRIPCION PRODUCTOS*/
+div#descripcion{
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: larger;
+}
   
