--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,8 @@ a.btn{
 }
 
 
-.btn-group, .btn-group-vertical {
+.btn-group,
+.btn-group-vertical {
     position: relative;
     display: inline-flex;
     vertical-align: middle;
