--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,15 +49,17 @@ input.form-control{
   }
 
 
-  .gradient-overlay {
+  .video-container::before {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
-    width: 450%;
+    width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8));
-    
+    background-color: rgba(0, 0, 0, 0.5); /* Ajusta el valor alfa (0.5) según tus necesidades */
   }
+    
+
 
   .cards{
     position: absolute;
